# metablooms-os-bundles

./: .gitattributes  .gitignore  CLAUDE.md  README_PACKAGE.md  TERMUX-GITHUB.md  package-lock.json  package.json  pyproject.toml  termux-github.sh  test-html.mjs
.claude/: settings.json
.codex/artifacts/: ARTIFACT_MATURITY.json  BUNDLE_CATALOG.json  BUNDLE_LINEAGE.json  DELTA_LEDGER_20260208.json  INVARIANT_REGISTRY.json  MMD_REPORT.json
.codex/capabilities/: CAP-001_MPP_ORCHESTRATOR.md  CAP-002_MASTERY_ENGINE.md  CAP-003_SEE_ENGINE.md  CAP-004_MMD_ENGINE.md  CAP-005_DECISION_ENGINE.md  CAP-006_RRP_ENGINE.md  CAP-007_ASSIMILATION_ENGINE.md  CAP-008_STATE_MANAGER.md  CAP-009_PATTERN_CATALOG.md  CAP-010_BOOT_SYSTEM.md  CAP-011_VALIDATION_GATES.md  CAP-012_MASTER_GOVERNANCE_GATE.md  CAP-013_SCHEMA_VALIDATION_GATE.md  CAP-014_STALENESS_GATE.md  CAP-015_LFS_GAP_GATE.md  CAP-016_FORBIDDEN_LANGUAGE_GATE.md  CAP-017_INVARIANT_GATE.md  CAP-018_MATURITY_GATE.md  CAP-019_POLICY_STRUCTURE_GATE.md  CAP-020_TOOLBOX_REALITY_GATE.md  CAP-021_MMD_GATE.md  CAP-022_PREPARATION_GATE.md  CAP-023_UPLOAD_PIPELINE.md  CAP-024_GIT_HOOK_INSTALLER.md  CAP-025_JSON_SCHEMA_SYSTEM.md
.codex/kernel/: BOOT.md
.codex/policies/: ARTIFACT_MATURITY_v1.md  BUNDLE_LIFECYCLE_v1.md  CDR_v2.md  DELTAGATE_v1.md  LEARNING_PIPELINE_v1.md  MB_MASTER_SPEC_v1.md  RRP_v1.md  SEE_ENGINE_v1.md  SUPER_PROMPT_v2.2.md  SUPER_PROMPT_v2.3.md
MetaBlooms_OS/: .gitignore  BOOT_PROMPT.md  boot.py  mpp.py
mpp/: MPP_SPEC.md  __init__.py  mpp_config.json  mpp_pipeline.py
scripts/: bts-gate.sh  mb-upload.sh
(+162 files in other folders)
